Fixed white space on editor's picks section in multiple browsers.

--- a/style.css
+++ b/style.css
@@ -739,7 +739,7 @@ h4.front-full-article-author a {
 }
 
 #editors-pick h4.front-full-article-author {
-	margin-top: 150px;
+	margin-top: 149px;
 	margin-bottom: 0;
 	width: 100%;
 	background-color: #f0825a;
